# tertrisWithSFML

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Block.h  Constants.h  GameOverState.h  GameState.h  StartMenuState.h  TetrisGame.h
src/: Block.cpp  GameOverState.cpp  StartMenuState.cpp  TetrisGame.cpp  main.cpp
